<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/MainSign_button"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewForgotPasswordMain"
        app:layout_constraintStart_toStartOf="@+id/textViewForgotPasswordMain"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordMain"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/main_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/ic_pictere1" />

    <TextView
        android:id="@+id/main_text_dont_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/MainSign_button"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/MainSign_button"
        app:layout_constraintTop_toBottomOf="@+id/MainSign_button" />

    <TextView
        android:id="@+id/main_text_singn_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/main_text_dont_have"
        app:layout_constraintStart_toStartOf="@+id/main_text_dont_have"
        app:layout_constraintTop_toBottomOf="@+id/main_text_dont_have" />

    <ImageView
        android:id="@+id/main_elipse_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eclipse_left" />

    <ImageView
        android:id="@+id/main_elipse_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eclipse_top"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmailLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="@+id/main_photos"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/main_photos"
        app:layout_constraintTop_toBottomOf="@+id/main_photos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_main"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPasswordLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:hint="@string/confirm_password_main"
        app:hintTextColor="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmailLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewForgotPasswordMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/password_hint"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPasswordLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>