<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".GetStartedActivity">


    <ImageView
        android:id="@+id/imageViewEclipseLeftGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eclipse_left" />

    <ImageView
        android:id="@+id/imagViewEclipseTopGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eclipse_top" />

    <TextView
        android:id="@+id/textViewLetsGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/let_s_get_things_done_on_time"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMainPhotoGetStarted"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageViewMainPhotoGetStarted"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMainPhotoGetStarted" />

    <TextView
        android:id="@+id/textViewLoremGetStarted"
        android:layout_width="278dp"
        android:layout_height="99dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/lorem_ipsum_started"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewLetsGetStarted"
        app:layout_constraintStart_toStartOf="@+id/textViewLetsGetStarted"
        app:layout_constraintTop_toBottomOf="@+id/textViewLetsGetStarted" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonGetStarted"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewLoremGetStarted"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/textViewLoremGetStarted"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoremGetStarted" />

    <ImageView
        android:id="@+id/imageViewMainPhotoGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo_get_started_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>